<resources>
    <string name="app_name">Araba</string>
    <string name="hello">hello araba app!!!!</string>
    <string name="loginpage">loginpage</string>
    <string name="fbtext">Login with facebook</string>
    <string name="emailtext">Login with email</string>
    <string name="registrationmessage">Register here</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="emailhit">Email or Phone</string>
    <string name="fullnamehint">Full name</string>
    <string name="passwordhint">Password</string>
    <string name="phonehint">Phone</string>
    <string name="signup">SIGN UP</string>
    <string name="send">SUBMIT</string>

    <string name="advertisement">Araba just hit the heart of biggest metropolitan
        city Dhaka with all the best cars and best drivers in best values
        to experience you a new level of comfort while you move.</string>

    <string name="advertisementheader">We launched the best ever transportation experience for you.</string>

    <string name="advertisement2">Thousands of riders joined as driver just because they finds the dignity.</string>

    <string name="advertisementheader2">Join the drivers</string>

    <!--***************Common values*****************-->

    <!--Dialog-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="must_have_value">must have a value</string>

    <string name="no_internet">No internet found, Please ensure you have internet connection to proceed.</string>
    <string name="empty_field" formatted="false">Please fill your %s first</string>
    <string name="please_wait">Please wait....</string>

    <!--Login-->
    <string name="login_email">Login with Email</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="register_now">Not yet a member? Register Now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_desc">We need your registered email address to send you password reset instructions.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verify_email">Please verify your email to continue.</string>
    <string name="please_input">Please input the empty field.</string>
    <string name="invalid_mail">Invalid email</string>

    <!--Register-->
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms">By checking this, you are agree with our terms of use and privacy policy agreement.</string>
    <string name="register">Register</string>
    <string name="already_member">Already Member?</string>
    <string name="agree_term">Please agree with term and condition to proceed.</string>
    <string name="password_no_match">Your password and confirm password not match.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="imageViewdescription">ImageView</string>
    <string name="driverEmailAddress">Ashraf Taukir</string>
    <string name="welcome">Welcome to Araba World</string>
    <string name="welcome2">Drive in Araba World</string>
    <string name="visit">Visit our site to know more.</string>
    <string name="tryagain">Please try again</string>
    <string name="navicon">NavigationDrawerIcon</string>
    <string name="searchbartext">Where to?</string>
    <string name="home">Add Home</string>
    <string name="work">Add Work</string>
    <string name="gotopin">Go to pin</string>
    <string name="savedplace">Saved Places</string>
    <string name="setlocation">Set location on map</string>
    <string name="enterDestination">Enter destination later</string>
    <string name="setDestination">Tap to select destination</string>
    <string name="setPickUp">Tap to select pickup location</string>
    <string name="value">Price</string>
    <string name="confirm">Confirm</string>
    <string name="rateItem">Rating Info</string>

    <!--Drawerlayout info-->


    <string-array name="string_array_name">
        <item>Payment</item>
        <item>Your Trips</item>
        <item>Help</item>
        <item>Setting</item>
        <item>Logout</item>
    </string-array>


</resources>
