<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorBlack">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginleft"
            android:src="@drawable/avatar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <RelativeLayout
            android:id="@+id/ratingbarRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_centerHorizontal="true"

            >
            <ImageView
                android:id="@+id/ratingicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/alligntop"
                android:background="@drawable/star"
                android:contentDescription="@string/done" />

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/alligntop"
                android:layout_toRightOf="@+id/ratingicon"
                android:text="@string/rateItem"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/margin20sp" />
        </RelativeLayout>

        <!--<RatingBar-->
        <!--android:id="@+id/ratingBar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/profile_image"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:isIndicator="true"-->
        <!--android:numStars="5"-->
        <!--android:rating="4.5"-->
        <!--android:scaleX="0.4"-->
        <!--android:scaleY="0.4"-->
        <!--android:stepSize="0.1" />-->

        <TextView

            android:id="@+id/riderName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingbarRelativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/driverEmailAddress"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/forgotpasswordtextsize"

            />

    </RelativeLayout>


</FrameLayout>




